--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ let state = JSON.parse(localStorage.getItem("systemMoney")) || {
     Starla: { balance: 0, notifications: [] },
     Sun: { balance: 0, notifications: [] },
     Sunny: { balance: 0, notifications: [] },
-    Teto: { balance: 0, notifications: ["i see you, and we are going to the bed tonight -miku"] },
+    Teto: { balance: 0, notifications: [] },
     "The Puppet": { balance: 0, notifications: [] },
     "Toy Bonnie": { balance: 0, notifications: [] },
     "Toy Chica": { balance: 0, notifications: [] },
@@ -150,6 +150,14 @@ function renderAlterSelect() {
   placeholder.value = "";
   placeholder.textContent = "Select an alter";
   sel.appendChild(placeholder);
+
+// ---------------- Teto Notification ----------------
+if (state.alters["Teto"]) {
+    state.alters["Teto"].notifications.push(
+        "I SEE YOU BITCH, also you BROKEEEEE nah im just playing. anygays ready to get frisky in bed? GOOD. -miku"
+    );
+    save();
+}
 
   Object.keys(state.alters).forEach(name => {
     const opt = document.createElement("option");
